# alice

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  SOUL.md.example  alembic.ini  config.example.yaml  docker-compose.yml  embedded_prompts.go  go.mod  go.sum  go.work.sum  pyproject.toml
.codex/environments/: environment.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md
.github/workflows/: ci.yml  docs-publish.yml  main-release.yml  release-on-tag.yml
alembic/: env.py
api/: README.md
app/: config.py  dependencies.py  logging_config.py  main.py  prompts.py
book/: index.html
cmd/: README.md
configs/: README.md  config.example.yaml
deployments/: README.md
docs/: README.md  architecture.md  architecture.zh-CN.md  codearmy-isolated-debug.md  codearmy-isolated-debug.zh-CN.md  codearmy.zh-CN.md  draft.md  feishu-message-flow.zh-CN.md  run-with-isolated-user.zh-CN.md  skills-usage-guide.md  usage.md  usage.zh-CN.md
internal/: README.md
memory/: MEMORY.md
pkg/: README.md
scripts/: README.md  alice-installer.sh  publish-cdn-assets.sh  run_weather_case.sh  secret-check.sh  update-self-and-sync-skill.sh
skills/: README.md
test/: README.md
tests/: test_approval_policy.py  test_codex_jsonl_parser.py  test_memory_store.py  test_prompts.py  test_todo_title_generator.py
web/: index.html
(+630 files in other folders)
