[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "alice-assistant"
version = "0.1.0"
description = "Alice portable private assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<0.40.0",
  "sqlalchemy>=2.0.32",
  "greenlet>=3.0.3",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "filelock>=3.15.4",
  "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "black>=24.8.0",
  "isort>=5.13.2",
  "mypy>=1.11.2",
  "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.pyi?$"
exclude = '''
/(
    \.venv
  | \.git
  | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 100
py_version = 312
skip = [".venv", "alembic/versions"]
known_first_party = ["app"]

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true
files = ["app", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
